# wrapyfi

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  update_dockerfiles.sh  upgrade_project.sh
.github/workflows/: manual_code_coverage.yml  manual_update_version.yml
dockerfiles/: README.md  wrapyfi_zeromq-ros.Dockerfile  wrapyfi_zeromq-ros2.Dockerfile  wrapyfi_zeromq-yarp-ros.Dockerfile  wrapyfi_zeromq-yarp-ros2.Dockerfile  wrapyfi_zeromq-yarp.Dockerfile
docs/: build_docs.sh  build_examples.py  conf.py  evaluation.md  examples.md  exclude_packages.json  index.rst  index_API.rst  readme_lnk.md  requirements.txt  ros2_interfaces_lnk.md  ros_interfaces_lnk.md  tutorials.md  usage.md  wrapyfi_docker_lnk.md  yarp_install.md  yarp_install_lnk.md
docs/_extensions/: build_examples.py  link_modifier.py  math_block_converter.py
docs/examples/: examples.applications.rst  examples.communication_patterns.rst  examples.communication_schemes.rst  examples.custom_msgs.rst  examples.encoders.plugins.rst  examples.encoders.rst  examples.robots.rst  examples.rst  examples.sensors.rst  examples.websockets.rst
docs/examples_docs/: examples.communication_schemes.rst  examples.custom_msgs.rst  examples.encoders.plugins.rst  examples.encoders.rst  examples.patterns.rst  examples.robots.rst  examples.rst  examples.sensors.rst
docs/source/: modules.rst  wrapyfi.clients.rst  wrapyfi.config.rst  wrapyfi.connect.rst  wrapyfi.listeners.rst  wrapyfi.middlewares.rst  wrapyfi.plugins.rst  wrapyfi.publishers.rst  wrapyfi.rst  wrapyfi.servers.rst  wrapyfi.standalone.rst  wrapyfi.tests.rst  wrapyfi.tests.tools.rst  wrapyfi.utils.rst
docs/tutorials/: Layer Sharding.md  Multiple Robots.md  Multiple Sensors.md
docs/usage/: User Guide.md
examples/: README.md  audio_video.py  cam_mic.py  commands.txt  encapsulation.py  hello_world.py  icub_head.py  jax_tensor.py  mxnet_tensor.py  numpy_arrays.py  numpy_pandas_arrays.py  object_notify.py  paddle_tensor.py  paper_examples.py  request_reply.py  requirements.txt  ros_parameter.py  tensorflow_tensor.py  torch_tensor.py  vid_warhol.py  vid_warhol_cfg1.yml  vid_warhol_cfg2.yml  vid_warhol_cfg3.yml
examples/applications/: affective_signaling_multirobot.py  gaze_mirroring_multisensor.py
examples/communication_patterns/: request_reply_example.py  transceive_reemit_example.py
examples/communication_schemes/: channeling.py  channeling_example.py  forwarding.py  forwarding_example.py  mirroring.py  mirroring_example.py
examples/custom_msgs/: ros2_message_example.py  ros_message.py  ros_message_example.py  ros_parameter_example.py
examples/encoders/: astropy_example.py  cupy_example.py  dask_example.py  jax_example.py  jax_tensor.py  mxnet_example.py  mxnet_tensor.py  numpy_pandas_arrays.py  numpy_pandas_example.py  paddle_tensor.py  paddlepaddle_example.py  pillow_example.py  pillow_image.py  pint_example.py  pyarrow_arrays.py  pyarrow_example.py  pytorch_example.py  tensorflow_example.py  tensorflow_tensor.py  torch_tensor.py  trax_example.py  xarray_arrays.py  xarray_example.py  zarr_example.py
examples/operation_modes/: channeling.py  encapsulation.py
examples/patterns/: request_reply.py
examples/robots/: icub_head.py
examples/sensors/: cam_mic.py
examples/websockets/: listener_client.py  publisher_client.py  websocket_server.py
wrapify/: __init__.py  encoders.py  utils.py
wrapify.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wrapify/config/: manager.py
wrapify/connect/: __init__.py  listeners.py  publishers.py  wrapper.py
wrapify/listeners/: ros.py  ros2.py  yarp.py  zeromq.py
wrapify/middlewares/: ros.py  ros2.py  yarp.py  zeromq.py
wrapify/plugins/: jax_tensor.py  mxnet_tensor.py  pandas_data.py  pytorch_tensor.py  tensorflow_tensor.py
wrapify/publishers/: ros.py  ros2.py  yarp.py  zeromq.py
wrapify/standalone/: zmq_proxy_broker.py
wrapify/tests/: benchmarking_native_object.py  benchmarking_plotter.ipynb
wrapyfi/: __init__.py  encoders.py  utils.py
wrapyfi/clients/: __init__.py  ros.py  ros2.py  yarp.py  zeromq.py
wrapyfi/config/: manager.py
wrapyfi/connect/: __init__.py  clients.py  listeners.py  publishers.py  servers.py  wrapper.py
wrapyfi/listeners/: __init__.py  mqtt.py  ros.py  ros2.py  websocket.py  yarp.py  zenoh.py  zeromq.py
wrapyfi/middlewares/: mqtt.py  ros.py  ros2.py  websocket.py  yarp.py  zenoh.py  zeromq.py
wrapyfi/plugins/: cupy_array.py  dask_data.py  jax_tensor.py  mxnet_tensor.py  paddle_tensor.py  pandas_data.py  pillow_image.py  pint_quantities.py  pyarrow_array.py  pytorch_tensor.py  tensorflow_tensor.py  trax_array.py  xarray_data.py  zarr_array.py
wrapyfi/publishers/: __init__.py  mqtt.py  ros.py  ros2.py  websocket.py  yarp.py  zenoh.py  zeromq.py
wrapyfi/servers/: __init__.py  ros.py  ros2.py  yarp.py  zeromq.py
wrapyfi/standalone/: zeromq_param_client.py  zeromq_param_server.py  zeromq_proxy_broker.py  zeromq_pubsub_topic_monitor.py  zmq_proxy_broker.py
wrapyfi/tests/: benchmarking_native_object.py  (+3 more)
wrapyfi_extensions/wrapyfi_ros2_interfaces/: CMakeLists.txt  README.md  package.xml
wrapyfi_extensions/wrapyfi_ros2_interfaces/msg/: ROS2AudioMessage.msg
wrapyfi_extensions/wrapyfi_ros2_interfaces/srv/: ROS2AudioService.srv  ROS2CompressedImageService.srv  ROS2ImageService.srv  ROS2NativeObjectService.srv
wrapyfi_extensions/wrapyfi_ros_interfaces/: CMakeLists.txt  LICENSE  README.md  package.xml  package.xml.bak
wrapyfi_extensions/wrapyfi_ros_interfaces/msg/: ROSAudioMessage.msg
wrapyfi_extensions/wrapyfi_ros_interfaces/srv/: ROSAudioService.srv
(+57 files in other folders)
